[project]
name = "support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.1.1",
    "onnx>=1.12.0,<1.18.0",
    "onnxruntime>=1.22.1",
    "onnxslim>=0.1.59",
    "optimum>=1.27.0",
    "transformers>=4.55.2",
    "ultralytics>=8.3.180",
]
[tool.uv]
# Resolve for macOS, but not for Linux or Windows.
environments = ["sys_platform == 'darwin'"]
